--- a/samples/aws/external/cluster-template-external-cloud-provider.yaml
+++ b/samples/aws/external/cluster-template-external-cloud-provider.yaml
@@ -72,7 +72,7 @@ spec:
       instanceType: ${AWS_CONTROL_PLANE_MACHINE_TYPE}
       sshKeyName: ${AWS_SSH_KEY_NAME}
       rootVolume:
-        size: 51
+        size: 50
 ---
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: MachineDeployment
@@ -120,6 +120,8 @@ metadata:
 spec: 
   template:
     spec:
+      preRKE2Commands:
+      - sudo hostnamectl set-hostname $(curl -s http://169.254.169.254/1.0/meta-data/hostname)
       agentConfig:
         version: ${KUBERNETES_VERSION}+rke2r1
 ---
